--- a/projects/playground/src/app/app.html
+++ b/projects/playground/src/app/app.html
@@ -2,6 +2,8 @@
     <div class="item-1">
         <p>Tipografias</p>
         <div class="typographies">
+            <h2>REM / Sans Serif</h2>
+            <small>https://fonts.googleapis.com/css2?family=REM:ital,wght@0,100..900;1,100..900&display=swap</small>
             <h1>Title H1</h1>
             <h2>Title H2</h2>
             <h3>Title H3</h3>
@@ -16,7 +18,8 @@
         </div>
     </div>
     <div class="item-2">
-        <cat-button style="position: fixed; top: 0; left: 0;" variant="contrast" (clicked)="handleTheme()" iconCenter="sun"></cat-button>
+        <cat-button customClass="theme-button" style="position: fixed; top: 0; left: 0;" variant="contrast"
+            (clicked)="handleTheme()" [iconLeft]="isDark ? 'sun' : 'moon'"></cat-button>
         <p>Colores</p>
         <div class="colors">
             <h4>Primary</h4>
@@ -93,7 +96,109 @@
     <div class="item-6">
         <p>Inputs</p>
         <cat-card customClass="cards">
-            <cat-text-input placeholder="Username"></cat-text-input>
+            <div class="input-inside-card">
+                <input catInput placeholder="Text Input" type="text">
+            </div>
+            <div class="input-inside-card">
+                <input catInput placeholder="Number Input" type="number">
+            </div>
+            <div class="input-inside-card">
+                <cat-select-input [options]="options" placeholder="Select Input" transform="translateY(0%) translateX(0%)"></cat-select-input>
+            </div>
+            <div class="input-inside-card">
+                <cat-color-input [icon]="true"></cat-color-input>
+                <p>Color Input con Iconos de Safirial</p>
+            </div>
+            <div class="input-inside-card">
+                <cat-color-input></cat-color-input>
+                <p>Color Input sin Iconos de Safirial</p>
+            </div>
+        </cat-card>
+    </div>
+    <div class="item-7">
+        <p>Overlays</p>
+        <cat-card customClass="cards">
+            <cat-button (clicked)="openDialog(0)">Surfaced Dialog</cat-button>
+            <cat-dialog *ngIf="surfacedDialogActive" (closs)="closeDialog($event, 0)">Dialog</cat-dialog>
+            <cat-button (clicked)="openDialog(1)">Elevated Dialog</cat-button>
+            <cat-dialog variant="elevated" *ngIf="elevatedDialogActive"
+                (closs)="closeDialog($event, 1)">Dialog</cat-dialog>
+            <cat-button (clicked)="openDialog(2)">Outlined Dialog</cat-button>
+            <cat-dialog variant="outlined" *ngIf="outlinedDialogActive"
+                (closs)="closeDialog($event, 2)">Dialog</cat-dialog>
+        </cat-card>
+    </div>
+    <div class="item-8">
+        <p>Panels</p>
+        <cat-card width="100%">
+            <cat-accordion label="Scrolleable" buttonVariant="primary" width="12em" [scrolleable]="true" [status]="accordionStatus">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip
+                    ex
+                    ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                    eu
+                    fugiat
+                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit
+                    anim id est laborum.</p>
+            </cat-accordion>
+            <cat-accordion label="Non Scrolleable" buttonVariant="primary" width="12em" [scrolleable]="false" [status]="accordionStatus">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip
+                    ex
+                    ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                    eu
+                    fugiat
+                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit
+                    anim id est laborum.</p>
+            </cat-accordion>
+        </cat-card>
+
+        <p>Accordion Group</p>
+        <cat-card width="100%">
+            <cat-accordion-group [singleExpand]="true">
+                <cat-accordion label="Surface/Secondary" accordionId="1" buttonVariant="secondary" variant="surface" width="12em" [scrolleable]="true"
+                    [status]="accordionStatus">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                        et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip ex
+                        ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                        eu fugiat
+                        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                        mollit
+                        anim id est laborum.</p>
+                </cat-accordion>
+                <cat-accordion label="Elevated/Contrast" accordionId="2" buttonVariant="contrast" variant="elevated" width="12em" [scrolleable]="true"
+                    [status]="accordionStatus">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                        et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip ex
+                        ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                        eu fugiat
+                        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                        mollit
+                        anim id est laborum.</p>
+                </cat-accordion>
+                <cat-accordion label="Outlined/Outlined" accordionId="3" buttonVariant="outline" variant="outlined" width="12em" [scrolleable]="true"
+                    [status]="accordionStatus">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                        et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip ex
+                        ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                        eu fugiat
+                        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                        mollit
+                        anim id est laborum.</p>
+                </cat-accordion>
+            </cat-accordion-group>
         </cat-card>
     </div>
 </div>
