--- a/projects/playground/src/app/app.scss
+++ b/projects/playground/src/app/app.scss
@@ -1,7 +1,7 @@
 .grid-container {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-rows: repeat(7, 1fr);
     gap: 8px;
     padding: 20px;
     border-radius: 16px;
@@ -13,12 +13,8 @@
 .grid-container>div {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     border-radius: 8px;
 
-    width: 100%;
-    height: 100%;
     background-color: var(--element-color-3);
     box-sizing: border-box;
     padding: 8px;
@@ -36,7 +32,7 @@
 
 .item-3 {
     grid-column: 5 / span 1;
-    grid-row: 1 / span 5;
+    grid-row: 1 / span 7;
 }
 
 .item-4 {
@@ -54,6 +50,15 @@
     grid-row: 4 / span 2;
 }
 
+.item-7 {
+    grid-column: 1 / span 2;
+    grid-row: 6 / span 2;
+}
+
+.item-8 {
+    grid-column: 3 / span 2;
+    grid-row: 6 / span 2;
+}
 
 /* Typographies */
 .typographies {
@@ -101,6 +106,16 @@
     flex-wrap: wrap;
 }
 
+
+/* Button */
+cat-button[data-button-class="theme-button"] {
+    ::ng-deep {
+        >button {
+            border-radius: 0%;
+            border-bottom-right-radius: 18px;
+        }
+    }
+}
 /* Cards */
 /*
 card tiene atributos sincronizados a hostBinging
@@ -120,8 +135,6 @@ cat-card[data-card-class="cards"] {
             box-sizing: border-box;
             width: 100%;
             height: 100%;
-            display: flex;
-            gap: 3%;
             background-color: var(--neutral-color-1);
             padding: 8px;
             border-radius: 18px;
@@ -147,3 +160,12 @@ cat-card {
     }
   }
 }*/
+
+.input-inside-card {
+    display: flex;
+    gap: 1em;
+
+    & cat-color-input {
+        margin: 16px;
+    }
+}
