--- a/projects/catarina/src/lib/design-system/overlays/drawer/drawer.css
+++ b/projects/catarina/src/lib/design-system/overlays/drawer/drawer.css
@@ -39,13 +39,16 @@ section {
     position: absolute;
 }
 
-.left {
-    width: 30em;
-    height: 100vh;
-    width: 30em;
-    height: 100vh;
-    left: 0;
+.left,
+.right {
     top: 0;
+    max-width: 30em;
+    width: 100%;
+    height: 100vh;
+}
+
+.left {
+    left: 0;
 
     & .close-button {
         right: .25rem;
@@ -53,31 +56,17 @@ section {
 }
 
 .right {
-    width: 30em;
-    height: 100vh;
     right: 0;
-    top: 0;
 
     & .close-button {
         left: .25rem;
     }
 }
 
-.top {
-    width: 100%;
-    height: 20em;
-    top: 0;
-    left: 0;
-
-    & .close-button {
-        right: .25rem;
-    }
-}
-
+.top,
 .bottom {
     width: 100%;
     height: 20em;
-    bottom: 0;
     left: 0;
 
     & .close-button {
@@ -85,7 +74,21 @@ section {
     }
 }
 
+.top {
+    top: 0;
+
+}
+
+.bottom {
+    bottom: 0;
+}
+
 @media screen and (orientation: portrait) {
+
+    .left,
+    .right {
+        width: 80%;
+    }
 
     .top,
     .bottom {
